<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator_Activity"
    android:orientation="vertical">

    <!--Screen-->
    <LinearLayout
        style="@style/MyLinearLayout"
        android:layout_weight="1">
        android:orientation="horizontal">

        <!--display result-->
        <TextView
            style="@style/TextViewStyle"
            android:text="0"/>

    </LinearLayout>
    
    //Border 2...Keyboard
    <LinearLayout
        style="@styles/MyLinearLayout"
        android:layout_weight="6">
        android:orientation="vertical">

        //Button row 1
        <LinearLayout
            style="@style/MyLinearLayoutNoMarginNoBorderStyle"
            android:layout_weight="1">

            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn1"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn2"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn3"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnCong"/>
        </LinearLayout>

        //Button row 2
        <LinearLayout
            style="@style/MyLinearLayoutNoMarginNoBorderStyle"
            android:layout_weight="2">

            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn4"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn5"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn6"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnTru"/>
        </LinearLayout>

        //Button row 3
        <LinearLayout
            style="@style/MyLinearLayoutNoMarginNoBorderStyle"
            android:layout_weight="3">

            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn7"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn8"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn9"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnNhan"/>
        </LinearLayout>

        //Button row 4
        <LinearLayout
            style="@style/MyLinearLayoutNoMarginNoBorderStyle"
            android:layout_weight="4">

            <Button
                style="@style/ButtonStyle"
                android:text="@string/btn0"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnC"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnKQ"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/btnChia"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>